hotfix: Fix compilation error due to java 9 List.of